[css3-text] Parsing -webkit-hanging value for text-indent from css3-text https://bugs.webkit.org/show_bug.cgi?id=113680

Source/WebCore:

Patch by Jaehun Lim <ljaehun.lim@samsung.com> on 2013-04-14
Reviewed by Andreas Kling.

This patch is the parsing part to support hanging value for text-indent.
"hanging" means "Inverts which lines are affected."
It's prefixed and guarded by CSS3_TEXT flag.

No new tests, this patch updates existing tests.

* css/CSSComputedStyleDeclaration.cpp:
(WebCore::CSSComputedStyleDeclaration::getPropertyCSSValue):
* css/CSSParser.cpp:
(WebCore::CSSParser::parseTextIndent): Parsed "-webkit-hanging" with "-webkit-each-line".
* css/CSSValueKeywords.in: Added "-webkit-hanging" keyword.
* css/DeprecatedStyleBuilder.cpp:
(WebCore::ApplyPropertyTextIndent::applyInheritValue):
(WebCore::ApplyPropertyTextIndent::applyInitialValue):
(WebCore::ApplyPropertyTextIndent::applyValue):
* rendering/style/RenderStyle.h:
* rendering/style/RenderStyleConstants.h: Added enum TextIndentType.
* rendering/style/StyleRareInheritedData.cpp:
(WebCore::StyleRareInheritedData::StyleRareInheritedData):
(WebCore::StyleRareInheritedData::operator==):
* rendering/style/StyleRareInheritedData.h: Added m_textIndentType.
(StyleRareInheritedData):
    Added the usual getter / setter / initial methods for m_textIndentType.

LayoutTests:

"hanging" is added for text-indent in CSS3.
http://dev.w3.org/csswg/css3-text/#hanging

Patch by Jaehun Lim <ljaehun.lim@samsung.com> on 2013-04-14
Reviewed by Andreas Kling.

* fast/css3-text/css3-text-indent/getComputedStyle/getComputedStyle-text-indent-expected.txt:
* fast/css3-text/css3-text-indent/getComputedStyle/script-tests/getComputedStyle-text-indent.js:
(valueSettingTest):

Canonical link: https://commits.webkit.org/132979@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148414 268f45cc-cd09-0410-ab3c-d52691b4dbfc